--- a/src/app/reservation/create-reservation/meetingroom-properties/meetingroom-properties.component.html
+++ b/src/app/reservation/create-reservation/meetingroom-properties/meetingroom-properties.component.html
@@ -1,11 +1,17 @@
-<h1 class="text-xl font-extrabold">Voer Aantal personen in:</h1>
-<mat-form-field class="w-full">
-  <mat-label>Aantal personen</mat-label>
-  <input matInput type="number" placeholder="Aantal pers." [(ngModel)]="numberOfPersons" (ngModelChange)="addNumberOfPersons($event)">
-</mat-form-field>
-<div class="w-full flex justify-center items-center space-x-4">
-  <button class="border-2 border-primary-dark-purple rounded-2xl w-fit h-fit px-3 py-0.5 text-2xl text-primary-dark-purple" matStepperPrevious>Vorige</button>
-  <button class="bg-primary-dark-purple rounded-2xl w-fit h-fit px-3 py-1 text-2xl text-white"
-          (click)="checkNumberOfPersons()"
-          matStepperNext>Volgende</button>
+<div class="w-full flex flex-col justify-center space-y-5 md:space-y-10 pt-0 md:pt-24">
+  <div class="flex flex-col space-y-2">
+    <h1 class="text-lg md:text-xl font-semibold">Voer het aantal personen in:</h1>
+    <mat-form-field class="w-full">
+      <mat-label>Aantal personen</mat-label>
+      <input matInput type="number" placeholder="Aantal pers." [(ngModel)]="numberOfPersons" (ngModelChange)="addNumberOfPersons($event)">
+    </mat-form-field>
+  </div>
+  
+  <div class="w-full flex justify-center items-center space-x-4">
+    <button class="border-2 border-primary-dark-purple rounded-lg w-fit h-fit p-2 text-lg md:text-xl hover:bg-secondary-purple-light duration-300" matStepperPrevious>Vorige</button>
+    <button class="bg-primary-dark-purple rounded-lg w-fit h-fit p-2 text-lg md:text-xl text-white hover:bg-purple-950 duration-300"
+            (click)="checkNumberOfPersons()"
+            matStepperNext>Volgende</button>
+  </div>
 </div>
+
