--- a/src/app/reservation/create-reservation/building-step/building-step.component.html
+++ b/src/app/reservation/create-reservation/building-step/building-step.component.html
@@ -9,7 +9,7 @@
              class="border-2 rounded-2xl overflow-hidden shadow-md
                  transition duration-500 hover:scale-105 active:scale-95
                  focus:outline-none focus:ring focus:ring-primary-dark-purple">
-          <img class="object-cover" src="assets/locations/{{building.name.toLowerCase()}}.png">
+          <img class="object-cover w-full h-48" src="assets/locations/{{building.name.toLowerCase()}}.png">
           <div class="p-4">
             <h1 class="text-xl font-medium">{{building.name}}</h1>
             <h3 class="text-gray-500">{{building.address}}</h3>
