--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,17 +1,13 @@
 <article class="flex flex-col space-y-6 w-full h-full p-4 md:p-0">
-  <h1 class="w-min whitespace-nowrap text-3xl font-bold">Welkom, {{ this.user?.firstName }}</h1>
-  <div class="flex flex-col w-full space-y-5 md:space-y-0 md:space-x-20 md:flex-row md:p-0">
-    <section class="w-full md:w-3/5 order-2 md:order-1">
-      <app-upcoming-reservations [reservations]="reservations" ></app-upcoming-reservations>
-      <app-default-location [defaultLocation]="favoriteLocation"></app-default-location>
-    </section>
-
-    <section class="w-full md:w-2/5 h-full pb-5 space-y-5 flex flex-col items-end order-1 md:order-2">
-      <button routerLink="/create-reservation" class="flex w-full md:w-auto justify-center space-x-2 p-2 bg-primary-dark-purple rounded-lg text-white hover:bg-purple-950">
-        <lucide-icon name="plus"></lucide-icon>
-        <p>Maak een nieuwe reservering</p>
-      </button>
-      <app-inbox class="hidden md:flex" [notifications]="notifications"></app-inbox>
-    </section>
+  <div class="flex flex-col md:flex-row space-y-6 md:space-y-0 md:justify-between">
+    <h1 class="w-min whitespace-nowrap text-3xl font-bold">Welkom, {{ this.user?.firstName }}</h1>
+    <button routerLink="/create-reservation" class="flex w-full md:w-1/4 self-end justify-center space-x-2 p-2 bg-primary-dark-purple rounded-lg text-white hover:bg-purple-950">
+      <lucide-icon name="plus"></lucide-icon>
+      <p>Maak een nieuwe reservering</p>
+    </button>
+  </div>
+  <div class="flex flex-col w-full space-y-0 md:p-0">
+    <app-upcoming-reservations [reservations]="reservations" ></app-upcoming-reservations>
+    <app-default-location [defaultLocation]="favoriteLocation"></app-default-location>
   </div>
 </article>
