--- a/src/app/reservation-details/reservation-details.component.html
+++ b/src/app/reservation-details/reservation-details.component.html
@@ -69,12 +69,14 @@
         </div>
       </div>
       <div class="flex-1 space-x-4 w-full md:w-auto md:self-end">
-        <button
-          (click)="openDeleteModal()"
-          class="bg-primary-red bg-opacity-80 w-full md:w-auto text-white p-2 rounded-lg hover:bg-red-700  duration-300 mr-2 lg:mx-2"
-        >
-          Annuleren
-        </button>
+        @if (deletable | async){
+          <button
+            (click)="openDeleteModal()"
+            class="bg-primary-red bg-opacity-80 w-full md:w-auto text-white p-2 rounded-lg hover:bg-red-700  duration-300 mr-2 lg:mx-2"
+          >
+            Annuleren
+          </button>
+        }
       </div>
     </div>
   </article>
