--- a/src/app/reservation-details/reservation-details.component.html
+++ b/src/app/reservation-details/reservation-details.component.html
@@ -55,7 +55,7 @@
           <h3 class="font-bold">Type</h3>
           <p>{{locationTypeTranslation[reservation.location.type]}}</p>
         </div>
-        <div>
+        <div *ngIf="isCheckingOwnReservations && locationTypeTranslation[reservation.location.type] != 'Flexplek'">
           <h3 class="font-bold">Aantal personen</h3>
           <p>
             {{ reservation.numberOfPeople || "Onbekend aantal personen" }}
@@ -69,7 +69,7 @@
         </div>
       </div>
       <div class="flex-1 space-x-4 w-full md:w-auto md:self-end">
-        <button
+        <button *ngIf="isCheckingOwnReservations"
           class="bg-primary-red bg-opacity-80 w-full md:w-auto text-white p-2 rounded-lg hover:bg-red-700  duration-300 mr-2 lg:mx-2"
         >
           Annuleren
