--- a/src/app/reservation-details/reservation-details.component.html
+++ b/src/app/reservation-details/reservation-details.component.html
@@ -75,7 +75,7 @@
           Annuleren
         </button>
         <button (click)="goToReservations()"
-          class="bg-green-500 bg-opacity-80 w-full md:w-auto text-white p-2 rounded-lg hover:bg-green-600  duration-300 mr-2 lg:mx-2"
+          class"bg-primary-dark-purple bg-opacity-80 w-full md:w-auto text-white p-2 rounded-lg hover:bg-purple-950  duration-300 mr-2 lg:mx-2"
         >
           Zie alle reserveringen
         </button>
