--- a/src/app/home/upcoming-reservations/upcoming-reservations.component.html
+++ b/src/app/home/upcoming-reservations/upcoming-reservations.component.html
@@ -3,7 +3,7 @@
     <h2 class="text-xl font-semibold">Aankomende reserveringen</h2>
     <button routerLink="/reservations" class="border-2 border-primary-dark-purple w-full md:w-auto p-2 rounded-lg hover:bg-secondary-purple-light duration-300" *ngIf="this.reservations.length > 0">Bekijk alles</button>
   </div>
-  <div *ngIf="this.reservations.length == 0">
+  <div *ngIf="this.reservations?.length == 0">
     <p>U heeft geen aankomende reserveringen.</p>
   </div>
   <ul class="space-y-4" *ngIf="this.reservations.length > 0">
